// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Portfolio grouped networks > should apply ledger import 1`] = `
<DocumentFragment>
  <div
    class="-mx-6 -mt-8 flex items-center justify-between border-b border-theme-secondary-300 bg-theme-secondary-100 px-6 py-1.5 dark:border-theme-secondary-800 dark:bg-black sm:mx-0 sm:mb-6 sm:mt-0 sm:border-b-0 sm:bg-transparent sm:px-0 sm:py-0 sm:dark:bg-transparent"
    data-testid="Portfolio__Header"
  >
    <div
      class="text-lg font-bold leading-5 sm:text-2xl"
    >
      Portfolio
    </div>
    <div
      class="-mr-4 text-right sm:mr-0"
    >
      <div
        class="flex items-center justify-end"
        data-testid="WalletControls"
      >
        <div
          class="static mr-0 flex items-center border-theme-secondary-300 pr-0 text-theme-primary-300 dark:border-theme-secondary-800 dark:text-theme-secondary-600 sm:mr-8 sm:border-r sm:pr-5 md:relative"
        >
          <div
            aria-expanded="false"
            aria-haspopup="dialog"
            data-testid="dropdown__toggle"
          >
            <span>
              <div
                class="group"
              >
                <button
                  class="ring-focus css-1mj8916"
                >
                  <div
                    class="flex h-5 w-5 items-center justify-center"
                  >
                    <div
                      class="css-1i4b0eq"
                      height="20"
                      width="20"
                    >
                      <svg
                        id="sliders-vertical"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        >
                          <path
                            d="M15 9V1M15 19v-4M18 12c0 1.7-1.4 3-3 3-1.7 0-3-1.4-3-3s1.2-3 3-3h0c1.7 0 3 1.3 3 3h0zM5 7.1V19M8 4c0-1.7-1.4-3-3-3S2 2.4 2 4c0 1.7 1.4 3 3 3s3-1.3 3-3c0 .1 0 0 0 0z"
                          />
                        </g>
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </span>
          </div>
        </div>
        <div
          class="flex sm:hidden"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-secondary-800 css-3y8nng"
            type="vertical"
          />
        </div>
        <div
          class="hidden gap-3 sm:flex"
        >
          <div>
            <button
              class="px-5 py-3 space-x-3 text-base relative items-center justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500 hidden md:inline-flex"
              data-testid="WalletControls__import-ledger"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <div
                    class="css-v0ob3f"
                    height="16"
                    width="16"
                  >
                    <svg
                      id="ledger"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M15 20v-5h5v1.25c0 2.125-1.625 3.75-3.75 3.75H15zm-7.5 0v-5h5v5h-5zm-3.75 0C1.625 20 0 18.375 0 16.25V15h5v5H3.75zm3.75-7.5V0h8.75C18.375 0 20 1.625 20 3.75v8.75H7.5zm-7.5 0v-5h5v5H0zM0 5V3.75C0 1.625 1.625 0 3.75 0H5v5H0z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <span
                    class="hidden lg:inline"
                  >
                    Import Ledger
                  </span>
                </div>
              </div>
            </button>
          </div>
          <button
            class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500"
            data-testid="WalletControls__import-wallet"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg
                    id="arrow-turn-down-bracket"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M16.55 1h-2.9c-2.1 0-3.7 1.7-3.7 3.7v8.4"
                      />
                      <path
                        d="M14.65 8.4l-4.7 4.7-4.6-4.7m13.65 5v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9"
                      />
                    </g>
                  </svg>
                </div>
                <span>
                  Import
                </span>
              </div>
            </div>
          </button>
          <button
            class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 green:hover:bg-theme-primary-700 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500"
            data-testid="WalletControls__create-wallet"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg
                    id="plus"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M1 10h18M10 1v18"
                      />
                    </g>
                  </svg>
                </div>
                <span>
                  Create
                </span>
              </div>
            </div>
          </button>
        </div>
        <div
          class="flex items-center sm:hidden"
        >
          <div
            aria-expanded="false"
            aria-haspopup="dialog"
            data-testid="dropdown__toggle"
          >
            <span
              class="-mx-1 flex items-center px-5 py-3 text-theme-primary-300 dark:text-theme-secondary-600"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="plus"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M1 10h18M10 1v18"
                    />
                  </g>
                </svg>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="NetworkWalletsGroupList"
  >
    <div
      class="md:!mb-3 css-13o3tsw"
      data-testid="WalletsGroup"
    >
      <div
        class="select-none cursor-pointer group md:h-20 md:p-4 flex flex-row items-center border-theme-secondary-300 dark:border-theme-secondary-800 px-6 py-4"
        data-testid="WalletsGroupHeader"
      >
        <div
          class="flex flex-grow flex-row items-center"
        >
          <div
            class="css-ziskls"
          >
            <div
              aria-label="ARK"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600"
              data-testid="NetworkIcon-ARK-ark.mainnet"
            >
              <div
                class="css-1i4b0eq"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg
                  id="ark"
                  viewBox="0 0 36.3 30.6"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="hidden flex-auto items-center justify-between space-x-2 px-3 sm:flex"
          >
            <h1
              class="mb-0 text-base md:text-lg"
              data-testid="header__title"
            >
              ARK
            </h1>
            <div
              class="grow"
            />
          </div>
          <div
            class="ml-auto flex flex-col space-y-1.5 text-right font-semibold sm:hidden"
          >
            <span
              class="text-sm text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <div
                class="flex items-center justify-end sm:h-6 h-5"
              >
                <span
                  aria-busy="true"
                  aria-live="polite"
                  class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                >
                  <span
                    class="react-loading-skeleton sm:h-4.5 h-4"
                    style="width: 140px;"
                  >
                    ‌
                  </span>
                  <br />
                </span>
              </div>
            </span>
            <span
              class="text-xs text-theme-secondary-500"
            >
              <div
                class="flex items-center justify-end sm:h-6 h-4"
              >
                <span
                  aria-busy="true"
                  aria-live="polite"
                  class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                >
                  <span
                    class="react-loading-skeleton sm:h-4.5 h-3.5"
                    style="width: 110px;"
                  >
                    ‌
                  </span>
                  <br />
                </span>
              </div>
            </span>
          </div>
          <div
            class="hidden flex-initial space-x-4 sm:flex css-1imdohp"
          >
            <span
              class="hidden"
            />
            <div
              class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800"
            >
              <span
                class="whitespace-nowrap text-sm text-theme-secondary-700 dark:text-theme-secondary-500"
              >
                Wallets
              </span>
              <span
                class="text-base text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div
                  class="flex items-center justify-end sm:h-6"
                >
                  <span
                    aria-busy="true"
                    aria-live="polite"
                    class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                  >
                    <span
                      class="react-loading-skeleton sm:h-4.5"
                      style="width: 60px;"
                    >
                      ‌
                    </span>
                    <br />
                  </span>
                </div>
              </span>
            </div>
            <div
              class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800"
            >
              <span
                class="whitespace-nowrap text-sm text-theme-secondary-700 dark:text-theme-secondary-500"
              >
                Total Balance
              </span>
              <span
                class="text-base text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div
                  class="flex items-center justify-end sm:h-6 h-5"
                >
                  <span
                    aria-busy="true"
                    aria-live="polite"
                    class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                  >
                    <span
                      class="react-loading-skeleton sm:h-4.5 h-4"
                      style="width: 140px;"
                    >
                      ‌
                    </span>
                    <br />
                  </span>
                </div>
              </span>
            </div>
            <div
              class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800 hidden lg:flex"
            >
              <span
                class="whitespace-nowrap text-sm text-theme-secondary-700 dark:text-theme-secondary-500"
              >
                Total Currency
              </span>
              <span
                class="text-base text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div
                  class="flex items-center justify-end sm:h-6 h-4"
                >
                  <span
                    aria-busy="true"
                    aria-live="polite"
                    class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                  >
                    <span
                      class="react-loading-skeleton sm:h-4.5 h-3.5"
                      style="width: 110px;"
                    >
                      ‌
                    </span>
                    <br />
                  </span>
                </div>
              </span>
            </div>
          </div>
        </div>
        <div
          class="ml-4 flex flex-shrink-0 items-center self-stretch transition-all duration-100 css-o6tyc"
        >
          <div
            class="css-tz6w2"
            data-testid="Accordion__toggle"
          >
            <div
              class="transition-transform css-15txs7d"
              height="10"
              width="10"
            >
              <svg
                id="chevron-down-small"
                viewBox="0 0 10 10"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="md:!mb-3 css-13o3tsw"
      data-testid="WalletsGroup"
    >
      <div
        class="select-none cursor-pointer group md:h-20 md:p-4 flex flex-row items-center border-theme-secondary-300 dark:border-theme-secondary-800 px-6 py-4"
        data-testid="WalletsGroupHeader"
      >
        <div
          class="flex flex-grow flex-row items-center"
        >
          <div
            class="css-ziskls"
          >
            <div
              aria-label="ARK Devnet"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="css-1i4b0eq"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg
                  id="ark"
                  viewBox="0 0 36.3 30.6"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
            <div
              class="absolute -bottom-2 -right-2 h-6 w-6 rounded-full bg-theme-background sm:hidden"
            >
              <div
                class="inline-block p-1 text-theme-secondary-700 dark:text-theme-secondary-600"
                data-testid="WalletIcon__TestNetwork"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg
                    id="code"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M6 6L1 9.98 6 14m8-8l5 3.98L14 14M11 4L9 16"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="hidden flex-auto items-center justify-between space-x-2 px-3 sm:flex"
          >
            <h1
              class="mb-0 text-base md:text-lg"
              data-testid="header__title"
            >
              ARK Devnet
            </h1>
            <div
              class="hidden sm:inline-flex"
            >
              <div
                class="inline-block p-1 text-theme-secondary-700 dark:text-theme-secondary-600"
                data-testid="WalletIcon__TestNetwork"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="code"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M6 6L1 9.98 6 14m8-8l5 3.98L14 14M11 4L9 16"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="grow"
            />
          </div>
          <div
            class="ml-auto flex flex-col space-y-1.5 text-right font-semibold sm:hidden"
          >
            <span
              class="text-sm text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <div
                class="flex items-center justify-end sm:h-6 h-5"
              >
                <span
                  aria-busy="true"
                  aria-live="polite"
                  class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                >
                  <span
                    class="react-loading-skeleton sm:h-4.5 h-4"
                    style="width: 140px;"
                  >
                    ‌
                  </span>
                  <br />
                </span>
              </div>
            </span>
            <span
              class="text-xs text-theme-secondary-500"
            >
              <span
                class="text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                N/A
              </span>
            </span>
          </div>
          <div
            class="hidden flex-initial space-x-4 sm:flex css-1imdohp"
          >
            <span
              class="hidden"
            />
            <div
              class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800"
            >
              <span
                class="whitespace-nowrap text-sm text-theme-secondary-700 dark:text-theme-secondary-500"
              >
                Wallets
              </span>
              <span
                class="text-base text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div
                  class="flex items-center justify-end sm:h-6"
                >
                  <span
                    aria-busy="true"
                    aria-live="polite"
                    class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                  >
                    <span
                      class="react-loading-skeleton sm:h-4.5"
                      style="width: 60px;"
                    >
                      ‌
                    </span>
                    <br />
                  </span>
                </div>
              </span>
            </div>
            <div
              class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800"
            >
              <span
                class="whitespace-nowrap text-sm text-theme-secondary-700 dark:text-theme-secondary-500"
              >
                Total Balance
              </span>
              <span
                class="text-base text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div
                  class="flex items-center justify-end sm:h-6 h-5"
                >
                  <span
                    aria-busy="true"
                    aria-live="polite"
                    class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                  >
                    <span
                      class="react-loading-skeleton sm:h-4.5 h-4"
                      style="width: 140px;"
                    >
                      ‌
                    </span>
                    <br />
                  </span>
                </div>
              </span>
            </div>
            <div
              class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800 hidden lg:flex"
            >
              <span
                class="whitespace-nowrap text-sm text-theme-secondary-700 dark:text-theme-secondary-500"
              >
                Total Currency
              </span>
              <span
                class="text-base text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <span
                  class="text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  N/A
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="ml-4 flex flex-shrink-0 items-center self-stretch transition-all duration-100 css-o6tyc"
        >
          <div
            class="css-tz6w2"
            data-testid="Accordion__toggle"
          >
            <div
              class="transition-transform css-15txs7d"
              height="10"
              width="10"
            >
              <svg
                id="chevron-down-small"
                viewBox="0 0 10 10"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Portfolio grouped networks > should render list 1`] = `
<DocumentFragment>
  <div
    class="-mx-6 -mt-8 flex items-center justify-between border-b border-theme-secondary-300 bg-theme-secondary-100 px-6 py-1.5 dark:border-theme-secondary-800 dark:bg-black sm:mx-0 sm:mb-6 sm:mt-0 sm:border-b-0 sm:bg-transparent sm:px-0 sm:py-0 sm:dark:bg-transparent"
    data-testid="Portfolio__Header"
  >
    <div
      class="text-lg font-bold leading-5 sm:text-2xl"
    >
      Portfolio
    </div>
    <div
      class="-mr-4 text-right sm:mr-0"
    >
      <div
        class="flex items-center justify-end"
        data-testid="WalletControls"
      >
        <div
          class="static mr-0 flex items-center border-theme-secondary-300 pr-0 text-theme-primary-300 dark:border-theme-secondary-800 dark:text-theme-secondary-600 sm:mr-8 sm:border-r sm:pr-5 md:relative"
        >
          <div
            aria-expanded="false"
            aria-haspopup="dialog"
            data-testid="dropdown__toggle"
          >
            <span>
              <div
                class="group"
              >
                <button
                  class="ring-focus css-1mj8916"
                >
                  <div
                    class="flex h-5 w-5 items-center justify-center"
                  >
                    <div
                      class="css-1i4b0eq"
                      height="20"
                      width="20"
                    >
                      <svg
                        id="sliders-vertical"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        >
                          <path
                            d="M15 9V1M15 19v-4M18 12c0 1.7-1.4 3-3 3-1.7 0-3-1.4-3-3s1.2-3 3-3h0c1.7 0 3 1.3 3 3h0zM5 7.1V19M8 4c0-1.7-1.4-3-3-3S2 2.4 2 4c0 1.7 1.4 3 3 3s3-1.3 3-3c0 .1 0 0 0 0z"
                          />
                        </g>
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </span>
          </div>
        </div>
        <div
          class="flex sm:hidden"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-secondary-800 css-3y8nng"
            type="vertical"
          />
        </div>
        <div
          class="hidden gap-3 sm:flex"
        >
          <div>
            <button
              class="px-5 py-3 space-x-3 text-base relative items-center justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500 hidden md:inline-flex"
              data-testid="WalletControls__import-ledger"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <div
                    class="css-v0ob3f"
                    height="16"
                    width="16"
                  >
                    <svg
                      id="ledger"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M15 20v-5h5v1.25c0 2.125-1.625 3.75-3.75 3.75H15zm-7.5 0v-5h5v5h-5zm-3.75 0C1.625 20 0 18.375 0 16.25V15h5v5H3.75zm3.75-7.5V0h8.75C18.375 0 20 1.625 20 3.75v8.75H7.5zm-7.5 0v-5h5v5H0zM0 5V3.75C0 1.625 1.625 0 3.75 0H5v5H0z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <span
                    class="hidden lg:inline"
                  >
                    Import Ledger
                  </span>
                </div>
              </div>
            </button>
          </div>
          <button
            class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500"
            data-testid="WalletControls__import-wallet"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg
                    id="arrow-turn-down-bracket"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M16.55 1h-2.9c-2.1 0-3.7 1.7-3.7 3.7v8.4"
                      />
                      <path
                        d="M14.65 8.4l-4.7 4.7-4.6-4.7m13.65 5v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9"
                      />
                    </g>
                  </svg>
                </div>
                <span>
                  Import
                </span>
              </div>
            </div>
          </button>
          <button
            class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 green:hover:bg-theme-primary-700 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500"
            data-testid="WalletControls__create-wallet"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg
                    id="plus"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M1 10h18M10 1v18"
                      />
                    </g>
                  </svg>
                </div>
                <span>
                  Create
                </span>
              </div>
            </div>
          </button>
        </div>
        <div
          class="flex items-center sm:hidden"
        >
          <div
            aria-expanded="false"
            aria-haspopup="dialog"
            data-testid="dropdown__toggle"
          >
            <span
              class="-mx-1 flex items-center px-5 py-3 text-theme-primary-300 dark:text-theme-secondary-600"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="plus"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M1 10h18M10 1v18"
                    />
                  </g>
                </svg>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="NetworkWalletsGroupList"
  >
    <div
      class="md:!mb-3 css-13o3tsw"
      data-testid="WalletsGroup"
    >
      <div
        class="select-none cursor-pointer group md:h-20 md:p-4 flex flex-row items-center border-theme-secondary-300 dark:border-theme-secondary-800 px-6 py-4"
        data-testid="WalletsGroupHeader"
      >
        <div
          class="flex flex-grow flex-row items-center"
        >
          <div
            class="css-ziskls"
          >
            <div
              aria-label="ARK"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600"
              data-testid="NetworkIcon-ARK-ark.mainnet"
            >
              <div
                class="css-1i4b0eq"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg
                  id="ark"
                  viewBox="0 0 36.3 30.6"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="hidden flex-auto items-center justify-between space-x-2 px-3 sm:flex"
          >
            <h1
              class="mb-0 text-base md:text-lg"
              data-testid="header__title"
            >
              ARK
            </h1>
            <div
              class="grow"
            />
          </div>
          <div
            class="ml-auto flex flex-col space-y-1.5 text-right font-semibold sm:hidden"
          >
            <span
              class="text-sm text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <div
                class="flex items-center justify-end sm:h-6 h-5"
              >
                <span
                  aria-busy="true"
                  aria-live="polite"
                  class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                >
                  <span
                    class="react-loading-skeleton sm:h-4.5 h-4"
                    style="width: 140px;"
                  >
                    ‌
                  </span>
                  <br />
                </span>
              </div>
            </span>
            <span
              class="text-xs text-theme-secondary-500"
            >
              <div
                class="flex items-center justify-end sm:h-6 h-4"
              >
                <span
                  aria-busy="true"
                  aria-live="polite"
                  class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                >
                  <span
                    class="react-loading-skeleton sm:h-4.5 h-3.5"
                    style="width: 110px;"
                  >
                    ‌
                  </span>
                  <br />
                </span>
              </div>
            </span>
          </div>
          <div
            class="hidden flex-initial space-x-4 sm:flex css-1imdohp"
          >
            <span
              class="hidden"
            />
            <div
              class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800"
            >
              <span
                class="whitespace-nowrap text-sm text-theme-secondary-700 dark:text-theme-secondary-500"
              >
                Wallets
              </span>
              <span
                class="text-base text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div
                  class="flex items-center justify-end sm:h-6"
                >
                  <span
                    aria-busy="true"
                    aria-live="polite"
                    class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                  >
                    <span
                      class="react-loading-skeleton sm:h-4.5"
                      style="width: 60px;"
                    >
                      ‌
                    </span>
                    <br />
                  </span>
                </div>
              </span>
            </div>
            <div
              class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800"
            >
              <span
                class="whitespace-nowrap text-sm text-theme-secondary-700 dark:text-theme-secondary-500"
              >
                Total Balance
              </span>
              <span
                class="text-base text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div
                  class="flex items-center justify-end sm:h-6 h-5"
                >
                  <span
                    aria-busy="true"
                    aria-live="polite"
                    class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                  >
                    <span
                      class="react-loading-skeleton sm:h-4.5 h-4"
                      style="width: 140px;"
                    >
                      ‌
                    </span>
                    <br />
                  </span>
                </div>
              </span>
            </div>
            <div
              class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800 hidden lg:flex"
            >
              <span
                class="whitespace-nowrap text-sm text-theme-secondary-700 dark:text-theme-secondary-500"
              >
                Total Currency
              </span>
              <span
                class="text-base text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div
                  class="flex items-center justify-end sm:h-6 h-4"
                >
                  <span
                    aria-busy="true"
                    aria-live="polite"
                    class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                  >
                    <span
                      class="react-loading-skeleton sm:h-4.5 h-3.5"
                      style="width: 110px;"
                    >
                      ‌
                    </span>
                    <br />
                  </span>
                </div>
              </span>
            </div>
          </div>
        </div>
        <div
          class="ml-4 flex flex-shrink-0 items-center self-stretch transition-all duration-100 css-o6tyc"
        >
          <div
            class="css-tz6w2"
            data-testid="Accordion__toggle"
          >
            <div
              class="transition-transform css-15txs7d"
              height="10"
              width="10"
            >
              <svg
                id="chevron-down-small"
                viewBox="0 0 10 10"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="md:!mb-3 css-13o3tsw"
      data-testid="WalletsGroup"
    >
      <div
        class="select-none cursor-pointer group md:h-20 md:p-4 flex flex-row items-center border-theme-secondary-300 dark:border-theme-secondary-800 px-6 py-4"
        data-testid="WalletsGroupHeader"
      >
        <div
          class="flex flex-grow flex-row items-center"
        >
          <div
            class="css-ziskls"
          >
            <div
              aria-label="ARK Devnet"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="css-1i4b0eq"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg
                  id="ark"
                  viewBox="0 0 36.3 30.6"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
            <div
              class="absolute -bottom-2 -right-2 h-6 w-6 rounded-full bg-theme-background sm:hidden"
            >
              <div
                class="inline-block p-1 text-theme-secondary-700 dark:text-theme-secondary-600"
                data-testid="WalletIcon__TestNetwork"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg
                    id="code"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M6 6L1 9.98 6 14m8-8l5 3.98L14 14M11 4L9 16"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="hidden flex-auto items-center justify-between space-x-2 px-3 sm:flex"
          >
            <h1
              class="mb-0 text-base md:text-lg"
              data-testid="header__title"
            >
              ARK Devnet
            </h1>
            <div
              class="hidden sm:inline-flex"
            >
              <div
                class="inline-block p-1 text-theme-secondary-700 dark:text-theme-secondary-600"
                data-testid="WalletIcon__TestNetwork"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="code"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M6 6L1 9.98 6 14m8-8l5 3.98L14 14M11 4L9 16"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="grow"
            />
          </div>
          <div
            class="ml-auto flex flex-col space-y-1.5 text-right font-semibold sm:hidden"
          >
            <span
              class="text-sm text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <div
                class="flex items-center justify-end sm:h-6 h-5"
              >
                <span
                  aria-busy="true"
                  aria-live="polite"
                  class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                >
                  <span
                    class="react-loading-skeleton sm:h-4.5 h-4"
                    style="width: 140px;"
                  >
                    ‌
                  </span>
                  <br />
                </span>
              </div>
            </span>
            <span
              class="text-xs text-theme-secondary-500"
            >
              <span
                class="text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                N/A
              </span>
            </span>
          </div>
          <div
            class="hidden flex-initial space-x-4 sm:flex css-1imdohp"
          >
            <span
              class="hidden"
            />
            <div
              class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800"
            >
              <span
                class="whitespace-nowrap text-sm text-theme-secondary-700 dark:text-theme-secondary-500"
              >
                Wallets
              </span>
              <span
                class="text-base text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div
                  class="flex items-center justify-end sm:h-6"
                >
                  <span
                    aria-busy="true"
                    aria-live="polite"
                    class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                  >
                    <span
                      class="react-loading-skeleton sm:h-4.5"
                      style="width: 60px;"
                    >
                      ‌
                    </span>
                    <br />
                  </span>
                </div>
              </span>
            </div>
            <div
              class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800"
            >
              <span
                class="whitespace-nowrap text-sm text-theme-secondary-700 dark:text-theme-secondary-500"
              >
                Total Balance
              </span>
              <span
                class="text-base text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div
                  class="flex items-center justify-end sm:h-6 h-5"
                >
                  <span
                    aria-busy="true"
                    aria-live="polite"
                    class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                  >
                    <span
                      class="react-loading-skeleton sm:h-4.5 h-4"
                      style="width: 140px;"
                    >
                      ‌
                    </span>
                    <br />
                  </span>
                </div>
              </span>
            </div>
            <div
              class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800 hidden lg:flex"
            >
              <span
                class="whitespace-nowrap text-sm text-theme-secondary-700 dark:text-theme-secondary-500"
              >
                Total Currency
              </span>
              <span
                class="text-base text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <span
                  class="text-theme-secondary-500 dark:text-theme-secondary-700"
                >
                  N/A
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="ml-4 flex flex-shrink-0 items-center self-stretch transition-all duration-100 css-o6tyc"
        >
          <div
            class="css-tz6w2"
            data-testid="Accordion__toggle"
          >
            <div
              class="transition-transform css-15txs7d"
              height="10"
              width="10"
            >
              <svg
                id="chevron-down-small"
                viewBox="0 0 10 10"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Portfolio grouped networks > should render without testnet wallets 1`] = `
<DocumentFragment>
  <div
    class="-mx-6 -mt-8 flex items-center justify-between border-b border-theme-secondary-300 bg-theme-secondary-100 px-6 py-1.5 dark:border-theme-secondary-800 dark:bg-black sm:mx-0 sm:mb-6 sm:mt-0 sm:border-b-0 sm:bg-transparent sm:px-0 sm:py-0 sm:dark:bg-transparent"
    data-testid="Portfolio__Header"
  >
    <div
      class="text-lg font-bold leading-5 sm:text-2xl"
    >
      Portfolio
    </div>
    <div
      class="-mr-4 text-right sm:mr-0"
    >
      <div
        class="flex items-center justify-end"
        data-testid="WalletControls"
      >
        <div
          class="static mr-0 flex items-center border-theme-secondary-300 pr-0 text-theme-primary-300 dark:border-theme-secondary-800 dark:text-theme-secondary-600 sm:mr-8 sm:border-r sm:pr-5 md:relative"
        >
          <div
            aria-expanded="false"
            aria-haspopup="dialog"
            data-testid="dropdown__toggle"
          >
            <span>
              <div
                class="group"
              >
                <button
                  class="ring-focus css-1mj8916"
                >
                  <div
                    class="flex h-5 w-5 items-center justify-center"
                  >
                    <div
                      class="css-1i4b0eq"
                      height="20"
                      width="20"
                    >
                      <svg
                        id="sliders-vertical"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        >
                          <path
                            d="M15 9V1M15 19v-4M18 12c0 1.7-1.4 3-3 3-1.7 0-3-1.4-3-3s1.2-3 3-3h0c1.7 0 3 1.3 3 3h0zM5 7.1V19M8 4c0-1.7-1.4-3-3-3S2 2.4 2 4c0 1.7 1.4 3 3 3s3-1.3 3-3c0 .1 0 0 0 0z"
                          />
                        </g>
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </span>
          </div>
        </div>
        <div
          class="flex sm:hidden"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-secondary-800 css-3y8nng"
            type="vertical"
          />
        </div>
        <div
          class="hidden gap-3 sm:flex"
        >
          <div>
            <button
              class="px-5 py-3 space-x-3 text-base relative items-center justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500 hidden md:inline-flex"
              data-testid="WalletControls__import-ledger"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <div
                    class="css-v0ob3f"
                    height="16"
                    width="16"
                  >
                    <svg
                      id="ledger"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M15 20v-5h5v1.25c0 2.125-1.625 3.75-3.75 3.75H15zm-7.5 0v-5h5v5h-5zm-3.75 0C1.625 20 0 18.375 0 16.25V15h5v5H3.75zm3.75-7.5V0h8.75C18.375 0 20 1.625 20 3.75v8.75H7.5zm-7.5 0v-5h5v5H0zM0 5V3.75C0 1.625 1.625 0 3.75 0H5v5H0z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <span
                    class="hidden lg:inline"
                  >
                    Import Ledger
                  </span>
                </div>
              </div>
            </button>
          </div>
          <button
            class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500"
            data-testid="WalletControls__import-wallet"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg
                    id="arrow-turn-down-bracket"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M16.55 1h-2.9c-2.1 0-3.7 1.7-3.7 3.7v8.4"
                      />
                      <path
                        d="M14.65 8.4l-4.7 4.7-4.6-4.7m13.65 5v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9"
                      />
                    </g>
                  </svg>
                </div>
                <span>
                  Import
                </span>
              </div>
            </div>
          </button>
          <button
            class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 green:hover:bg-theme-primary-700 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500"
            data-testid="WalletControls__create-wallet"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg
                    id="plus"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M1 10h18M10 1v18"
                      />
                    </g>
                  </svg>
                </div>
                <span>
                  Create
                </span>
              </div>
            </div>
          </button>
        </div>
        <div
          class="flex items-center sm:hidden"
        >
          <div
            aria-expanded="false"
            aria-haspopup="dialog"
            data-testid="dropdown__toggle"
          >
            <span
              class="-mx-1 flex items-center px-5 py-3 text-theme-primary-300 dark:text-theme-secondary-600"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="plus"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M1 10h18M10 1v18"
                    />
                  </g>
                </svg>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="NetworkWalletsGroupList"
  >
    <div
      class="md:!mb-3 css-13o3tsw"
      data-testid="WalletsGroup"
    >
      <div
        class="select-none cursor-pointer group md:h-20 md:p-4 flex flex-row items-center border-theme-secondary-300 dark:border-theme-secondary-800 px-6 py-4"
        data-testid="WalletsGroupHeader"
      >
        <div
          class="flex flex-grow flex-row items-center"
        >
          <div
            class="css-ziskls"
          >
            <div
              aria-label="ARK"
              class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600"
              data-testid="NetworkIcon-ARK-ark.mainnet"
            >
              <div
                class="css-1i4b0eq"
                data-testid="NetworkIcon__icon"
                height="20"
                width="20"
              >
                <svg
                  id="ark"
                  viewBox="0 0 36.3 30.6"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="hidden flex-auto items-center justify-between space-x-2 px-3 sm:flex"
          >
            <h1
              class="mb-0 text-base md:text-lg"
              data-testid="header__title"
            >
              ARK
            </h1>
            <div
              class="grow"
            />
          </div>
          <div
            class="ml-auto flex flex-col space-y-1.5 text-right font-semibold sm:hidden"
          >
            <span
              class="text-sm text-theme-secondary-900 dark:text-theme-secondary-200"
            >
              <div
                class="flex items-center justify-end sm:h-6 h-5"
              >
                <span
                  aria-busy="true"
                  aria-live="polite"
                  class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                >
                  <span
                    class="react-loading-skeleton sm:h-4.5 h-4"
                    style="width: 140px;"
                  >
                    ‌
                  </span>
                  <br />
                </span>
              </div>
            </span>
            <span
              class="text-xs text-theme-secondary-500"
            >
              <div
                class="flex items-center justify-end sm:h-6 h-4"
              >
                <span
                  aria-busy="true"
                  aria-live="polite"
                  class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                >
                  <span
                    class="react-loading-skeleton sm:h-4.5 h-3.5"
                    style="width: 110px;"
                  >
                    ‌
                  </span>
                  <br />
                </span>
              </div>
            </span>
          </div>
          <div
            class="hidden flex-initial space-x-4 sm:flex css-1imdohp"
          >
            <span
              class="hidden"
            />
            <div
              class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800"
            >
              <span
                class="whitespace-nowrap text-sm text-theme-secondary-700 dark:text-theme-secondary-500"
              >
                Wallets
              </span>
              <span
                class="text-base text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div
                  class="flex items-center justify-end sm:h-6"
                >
                  <span
                    aria-busy="true"
                    aria-live="polite"
                    class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                  >
                    <span
                      class="react-loading-skeleton sm:h-4.5"
                      style="width: 60px;"
                    >
                      ‌
                    </span>
                    <br />
                  </span>
                </div>
              </span>
            </div>
            <div
              class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800"
            >
              <span
                class="whitespace-nowrap text-sm text-theme-secondary-700 dark:text-theme-secondary-500"
              >
                Total Balance
              </span>
              <span
                class="text-base text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div
                  class="flex items-center justify-end sm:h-6 h-5"
                >
                  <span
                    aria-busy="true"
                    aria-live="polite"
                    class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                  >
                    <span
                      class="react-loading-skeleton sm:h-4.5 h-4"
                      style="width: 140px;"
                    >
                      ‌
                    </span>
                    <br />
                  </span>
                </div>
              </span>
            </div>
            <div
              class="flex flex-col space-y-1 border-r border-theme-secondary-300 pr-4 text-right font-semibold dark:border-theme-secondary-800 hidden lg:flex"
            >
              <span
                class="whitespace-nowrap text-sm text-theme-secondary-700 dark:text-theme-secondary-500"
              >
                Total Currency
              </span>
              <span
                class="text-base text-theme-secondary-900 dark:text-theme-secondary-200"
              >
                <div
                  class="flex items-center justify-end sm:h-6 h-4"
                >
                  <span
                    aria-busy="true"
                    aria-live="polite"
                    class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                  >
                    <span
                      class="react-loading-skeleton sm:h-4.5 h-3.5"
                      style="width: 110px;"
                    >
                      ‌
                    </span>
                    <br />
                  </span>
                </div>
              </span>
            </div>
          </div>
        </div>
        <div
          class="ml-4 flex flex-shrink-0 items-center self-stretch transition-all duration-100 css-o6tyc"
        >
          <div
            class="css-tz6w2"
            data-testid="Accordion__toggle"
          >
            <div
              class="transition-transform css-15txs7d"
              height="10"
              width="10"
            >
              <svg
                id="chevron-down-small"
                viewBox="0 0 10 10"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
